# jsre

./: .gitignore  CMakeLists.txt  args.gn  babel.cpp  babel.hpp  global.cpp  global.hpp  hash.cpp  hash.hpp  isolatewrapper.cpp  isolatewrapper.hpp  main.cpp  reporting.cpp  reporting.hpp  utils.cpp  utils.hpp  v8.cpp  v8.hpp
analyze/: astqueries.cpp  astqueries.hpp  conditionals.cpp  conditionals.hpp  identresolution.cpp  identresolution.hpp  missingawait.cpp  missingawait.hpp  typecheck.cpp  typecheck.hpp  typerefinement.cpp  typerefinement.hpp  unused.cpp  unused.hpp
ast/: ast.cpp  ast.hpp  import.cpp  import.hpp  location.cpp  location.hpp  parse.cpp  parse.hpp  walk.cpp  walk.hpp
babel/: .gitignore  CMakeLists.txt  babel.asm  package.json
graph/: basicblock.cpp  basicblock.hpp  dot.cpp  dot.hpp  graph.cpp  graph.hpp  graphbuilder.cpp  graphbuilder.hpp  type.hpp
module/: basicmodule.cpp  basicmodule.hpp  global.cpp  module.cpp  module.hpp  moduleresolver.cpp  moduleresolver.hpp  nativemodule.cpp  nativemodule.hpp
module/native/: buffer.cpp  buffer.js  console.cpp  crypto.cpp  fs.cpp  module_js.asm.in  modules.cpp  modules.hpp.in  process.cpp  tty.cpp  tty.js  util.cpp  util.js
passes/: CMakeLists.txt
passes/function/: list.cpp  list.hpp.in  missingawait.cpp  missingawait.hpp
queries/: dataflow.cpp  dataflow.hpp  maybe.hpp  typeresolution.cpp  typeresolution.hpp  types.cpp  types.hpp
test/: CMakeLists.txt  test.hpp  test_main.cpp
test/identresolution/: S10.2.2_A1_T1.js  S10.2.2_A1_T2.js  S10.2.2_A1_T3.js  S10.2.2_A1_T4.js  S10.2.2_A1_T5_no_with.js  S10.2.2_A1_T6_no_with.js  S10.2.2_A1_T7_no_with.js  S10.2.2_A1_T8_no_with.js  S10.2.2_A1_T9_no_with.js  catch.js  forStatements.js  funClassExprs.js  funcParams.js  imports.js  multi.js  objKeys.js  test.cpp.in
test/typecheck/scoping/: test.cpp.in  var_with_param_name.js
transform/: blank.cpp  blank.hpp  flow.cpp  flow.hpp
utils/: reporting.cpp  reporting.hpp  trim.cpp  trim.hpp  utils.hpp
v8/: isolatewrapper.cpp  v8.cpp  v8_startup_snapshots.asm.in
